--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 android:hint="adress"
                 android:imeOptions="actionGo"
                 android:singleLine="true"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/btnGo"
@@ -44,6 +44,46 @@
                 android:layout_height="wrap_content"
                 android:text="B" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rab0"
+                    style="@style/MyRadioBtn"
+                    android:text="0" />
+
+                <RadioButton
+                    android:id="@+id/rab1"
+                    style="@style/MyRadioBtn"
+                    android:text="1" />
+
+                <RadioButton
+                    android:id="@+id/rab2"
+                    style="@style/MyRadioBtn"
+                    android:text="2" />
+
+                <RadioButton
+                    android:id="@+id/rab3"
+                    style="@style/MyRadioBtn"
+                    android:text="3" />
+
+                <RadioButton
+                    android:id="@+id/rab4"
+                    style="@style/MyRadioBtn"
+                    android:text="4" />
+
+
+
+            </RadioGroup>
         </LinearLayout>
 
         <LinearLayout
@@ -89,7 +129,7 @@
             <Button
                 android:id="@+id/btnC"
                 android:layout_width="50dp"
-                android:layout_height="35dp"
+                android:layout_height="50dp"
                 android:text="C" />
 
         </LinearLayout>
