--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,13 @@
         <item name="android:background">#153b2a</item>
     </style>
 
+
+    <!-- Radiobutton -->
+    <style name="MyRadioBtn">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/number_sel1</item>
+
+    </style>
 </resources>
