--- a/app/src/main/res/drawable/shape_corner_pink.xml
+++ b/app/src/main/res/drawable/shape_corner_pink.xml
@@ -3,8 +3,11 @@
     <!--<item android:drawable="@color/colorPrimaryDark" />-->
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" >
+            <stroke
+                android:width="1dp"
+                android:color="@color/pink" />
 
-            <solid android:color="@color/radio" />
+            <solid android:color="@android:color/transparent" />
 
             <padding
                 android:bottom="1dp"
@@ -12,7 +15,7 @@
                 android:right="1dp"
                 android:top="1dp" />
 
-            <corners android:radius="10dp" />
+            <corners android:radius="20dp" />
         </shape>
     </item>
 </layer-list>
