--- a/app/src/main/res/drawable/shape_solid_pink.xml
+++ b/app/src/main/res/drawable/shape_solid_pink.xml
@@ -3,11 +3,8 @@
     <!--<item android:drawable="@color/colorPrimaryDark" />-->
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-            <stroke
-                android:width="1dp"
-                android:color="@color/radio" />
 
-            <!--<solid android:color="@color/background_tab_pressed" />-->
+            <solid android:color="@color/pink" />
 
             <padding
                 android:bottom="1dp"
@@ -15,7 +12,7 @@
                 android:right="1dp"
                 android:top="1dp" />
 
-            <corners android:radius="10dp" />
+            <corners android:radius="20dp" />
         </shape>
     </item>
 </layer-list>
