--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
@@ -10,6 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="0dp">
+
 
 
         <LinearLayout
@@ -52,35 +54,35 @@
             android:orientation="horizontal">
 
             <RadioGroup
+                android:id="@+id/radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <RadioButton
+                <android.support.v7.widget.AppCompatRadioButton
                     android:id="@+id/rab0"
                     style="@style/MyRadioBtn"
                     android:text="0" />
 
-                <RadioButton
+                <android.support.v7.widget.AppCompatRadioButton
                     android:id="@+id/rab1"
                     style="@style/MyRadioBtn"
                     android:text="1" />
 
-                <RadioButton
+                <android.support.v7.widget.AppCompatRadioButton
                     android:id="@+id/rab2"
                     style="@style/MyRadioBtn"
                     android:text="2" />
 
-                <RadioButton
+                <android.support.v7.widget.AppCompatRadioButton
                     android:id="@+id/rab3"
                     style="@style/MyRadioBtn"
                     android:text="3" />
 
-                <RadioButton
+                <android.support.v7.widget.AppCompatRadioButton
                     android:id="@+id/rab4"
                     style="@style/MyRadioBtn"
                     android:text="4" />
-
 
 
             </RadioGroup>
