--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
 
-    <color name="radio">#FF4081</color>
+    <color name="pink">#FF4081</color>
 </resources>
