--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,8 +24,12 @@
     <style name="MyRadioBtn">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">5dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@drawable/number_sel1</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@android:color/transparent</item>
+        <item name="android:background">@drawable/sel_radio</item>
 
     </style>
 </resources>
